<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/want_to_exit_application"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />




        <Button
            android:id="@+id/quitApp"
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/quit"
            android:textSize="11sp" />

        <Button
            android:id="@+id/close"
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:text="@string/close"
            android:textSize="11sp" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>