<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_app_bar_menu"
        app:title="@string/app_name" />


    <!--Ad layout below-->
    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_view_container">


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textindicatorLayout">

            <LinearLayout
                android:id="@+id/ImageOutputLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@color/orange"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_margin="5dp"
                    android:elevation="8dp"
                    style="@style/Widget.Material3.CardView.Elevated">

                    <LinearLayout
                        android:id="@+id/editorLayer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/darkGrey"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:gravity="start"
                            android:src="@drawable/three_dot" />

                        <com.amrdeveloper.codeview.CodeView
                            android:id="@+id/codeView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeMinTextSize="10sp"
                            android:background="@android:color/transparent"
                            android:cursorVisible="true"
                            android:dropDownWidth="150dp"
                            android:dropDownHorizontalOffset="0dp"
                            android:dropDownSelector="@color/darkGrey"
                            android:gravity="top|start"
                            android:scrollHorizontally="true"
                            tools:targetApi="o" />

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="#CodeToImage"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="Download -> Google Play Store"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <!--dropdown list-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dropdown_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Select a Language">

                        <AutoCompleteTextView
                            android:id="@+id/dropdown_menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:popupBackground="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:text="@string/font"
                            android:textAlignment="center" />

                        <com.google.android.material.slider.Slider
                            android:id="@+id/textSizeSlider"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:valueFrom="0.0"
                            android:valueTo="100.0"
                            app:thumbHeight="15dp"
                            app:thumbRadius="12dp"
                            app:thumbWidth="15dp"
                            app:trackHeight="8dp" />

                    </LinearLayout>

                </LinearLayout>





            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="vertical"
        android:padding="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3"
            >

            <LinearLayout
                android:id="@+id/clearText"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/clear_all_24px"
                    android:tint="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,UseAppTint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/clear_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/changeEditorBgColorButton"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_colorize_24"
                    android:tint="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,UseAppTint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/bg_color_editor"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/shareButton"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_share"
                    android:tint="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,UseAppTint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/share"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="4"
            >

            <LinearLayout
                android:id="@+id/restButton"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/reset"
                    android:tint="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,UseAppTint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/reset"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/changeBgColorButton"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_colorize_24"
                    android:tint="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,UseAppTint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/bg_color"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/pastTextButton"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_content_paste_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="Paste"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/saveImageButton"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_save_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="Save Image"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>